objects/FinServ__Education__c.object
<CustomObject>
    <description>Represents a client&apos;s educational background.</description>
    <fields>
        <fullName>FinServ__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Education</relationshipLabel>
        <relationshipName>Education</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__EducationLevel__c</fullName>
        <label>Education Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Post Graduate</fullName>
                </value>
                <value>
                    <fullName>Decline to Comment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__GraduationDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Institution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Education</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Institution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Education</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FinServ__YearOfGradCannotBeInFuture</fullName>
        <active>true</active>
        <description>Error message when the year of graduation is in the future.</description>
        <errorConditionFormula>YEAR(FinServ__GraduationDate__c) &gt; YEAR(TODAY())</errorConditionFormula>
        <errorMessage>The year of graduation can&apos;t be in the future.</errorMessage>
    </validationRules>
</CustomObject>